--- a/index.html
+++ b/index.html
@@ -308,9 +308,8 @@
           <div class="cover__content">
             <h2 class="cover__content-title">Visítanos</h2>
             <p class="cover__content-subtitle">
-              Todo el año<br />
-              Galería de Arte de Practicum<br />
-              404, Avenida Tim Berners-Lee.
+              Todo el año Galería de Arte de Practicum 404, Avenida Tim
+              Berners-Lee.
             </p>
             <button class="cover__frame6">Comprar entradas</button>
           </div>
