--- a/index.html
+++ b/index.html
@@ -57,42 +57,42 @@
         <section class="content__album-fotos">
           <img
             src="./images/__item1.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
           <img
             src="./images/__item2.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
           <img
             src="./images/__item3.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
           <img
             src="./images/__item4.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
           <img
             src="./images/__item5.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
           <img
             src="./images/__item6.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
           <img
             src="./images/__item7.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
           <img
             src="./images/__item8.png"
-            alt="Aqui debe haber una imagen"
+            alt="Ciudad natal"
             class="content__foto"
           />
         </section>
@@ -105,7 +105,11 @@
               class="content__image"
             />
             <button class="content__frame6">
-              Compra esta oba de arte como NFT
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="button-text"
+                >Compra esta oba de arte como NFT</a
+              >
             </button>
             <div class="content__website">
               <p class="content__url-heading">Artista</p>
@@ -147,7 +151,11 @@
               class="content__image"
             />
             <button class="content__frame6">
-              Compra esta obra de arte como NFT
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="button-text"
+                >Compra esta oba de arte como NFT</a
+              >
             </button>
             <div class="content__website">
               <p class="content__url-heading content__url-heading_ancho">
@@ -191,7 +199,11 @@
               class="content__image"
             />
             <button class="content__frame6">
-              Compra esta obra de arte como NFT
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="button-text"
+                >Compra esta oba de arte como NFT</a
+              >
             </button>
             <div class="content__website content__website_position">
               <p class="content__url-heading">Artista</p>
@@ -228,7 +240,11 @@
               class="content__image"
             />
             <button class="content__frame6">
-              Compra esta obra de arte como NFT
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="button-text"
+                >Compra esta oba de arte como NFT</a
+              >
             </button>
             <div class="content__website">
               <p class="content__url-heading">Artista</p>
@@ -274,7 +290,11 @@
               class="content__image"
             />
             <button class="content__frame6">
-              Compra esta obra de arte como NFT
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="button-text"
+                >Compra esta oba de arte como NFT</a
+              >
             </button>
             <div class="content__website">
               <a class="content__url-heading">Artista</a>
@@ -302,7 +322,7 @@
         <section class="cover">
           <img
             src="./images/__background.png"
-            alt="Imagen de fondo"
+            alt="Galeria de Arte"
             class="cover__imagen"
           />
           <div class="cover__content">
@@ -311,7 +331,13 @@
               Todo el año Galería de Arte de Practicum 404, Avenida Tim
               Berners-Lee.
             </p>
-            <button class="cover__frame6">Comprar entradas</button>
+            <button class="cover__frame6">
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="button-text"
+                >Comprar entradas</a
+              >
+            </button>
           </div>
         </section>
       </main>
