--- a/index.html
+++ b/index.html
@@ -104,13 +104,9 @@
               alt="Ciudad Natal"
               class="content__image"
             />
-            <button class="content__frame6">
-              <a
-                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="button-text"
-                >Compra esta oba de arte como NFT</a
-              >
-            </button>
+            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+              Compra esta obra de arte como NFT
+            </a>
             <div class="content__website">
               <p class="content__url-heading">Artista</p>
               <div class="content__artistas">
@@ -150,13 +146,9 @@
               alt="Ciudad Natal"
               class="content__image"
             />
-            <button class="content__frame6">
-              <a
-                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="button-text"
-                >Compra esta oba de arte como NFT</a
-              >
-            </button>
+            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+              Compra esta obra de arte como NFT
+            </a>
             <div class="content__website">
               <p class="content__url-heading content__url-heading_ancho">
                 Artistas
@@ -198,13 +190,9 @@
               alt="Ciudad Natal"
               class="content__image"
             />
-            <button class="content__frame6">
-              <a
-                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="button-text"
-                >Compra esta oba de arte como NFT</a
-              >
-            </button>
+            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+              Compra esta obra de arte como NFT
+            </a>
             <div class="content__website content__website_position">
               <p class="content__url-heading">Artista</p>
               <div class="content__artistas">
@@ -239,13 +227,9 @@
               alt="Ciudad Natal"
               class="content__image"
             />
-            <button class="content__frame6">
-              <a
-                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="button-text"
-                >Compra esta oba de arte como NFT</a
-              >
-            </button>
+            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+              Compra esta obra de arte como NFT
+            </a>
             <div class="content__website">
               <p class="content__url-heading">Artista</p>
               <div class="content__artistas">
@@ -289,13 +273,9 @@
               alt="Ciudad Natal"
               class="content__image"
             />
-            <button class="content__frame6">
-              <a
-                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="button-text"
-                >Compra esta oba de arte como NFT</a
-              >
-            </button>
+              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+                Compra esta obra de arte como NFT
+              </a>
             <div class="content__website">
               <a class="content__url-heading">Artista</a>
               <div class="content__artistas">
@@ -331,13 +311,11 @@
               Todo el año Galería de Arte de Practicum 404, Avenida Tim
               Berners-Lee.
             </p>
-            <button class="cover__frame6">
-              <a
-                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="button-text"
-                >Comprar entradas</a
-              >
-            </button>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="cover__frame6"
+              >Comprar entradas</a
+            >
           </div>
         </section>
       </main>
