Proyecto Homeland Final

--- a/index.html
+++ b/index.html
@@ -56,43 +56,43 @@
         </section>
         <section class="content__album-fotos">
           <img
-            src="./images/__item1.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum1.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
           <img
-            src="./images/__item2.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum2.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
           <img
-            src="./images/__item3.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum3.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
           <img
-            src="./images/__item4.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum4.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
           <img
-            src="./images/__item5.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum5.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
           <img
-            src="./images/__item6.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum6.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
           <img
-            src="./images/__item7.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum7.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
           <img
-            src="./images/__item8.png"
-            alt="Ciudad natal"
+            src="./images/ciudad_practicum8.png"
+            alt="Ciudad de Practicum"
             class="content__foto"
           />
         </section>
@@ -100,11 +100,14 @@
           <div class="content__place">
             <h2 class="content__title">Kiev, Ucrania</h2>
             <img
-              src="./images/__image1.png"
-              alt="Ciudad Natal"
+              src="./images/ciudad_kiev.png"
+              alt="Ciudad de Practicum"
               class="content__image"
             />
-            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="content__frame6"
+            >
               Compra esta obra de arte como NFT
             </a>
             <div class="content__website">
@@ -142,11 +145,14 @@
               Criccieth, Gales
             </h2>
             <img
-              src="./images/__image2.png"
-              alt="Ciudad Natal"
+              src="./images/ciudad_gales.png"
+              alt="Ciudad de Practicum"
               class="content__image"
             />
-            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="content__frame6"
+            >
               Compra esta obra de arte como NFT
             </a>
             <div class="content__website">
@@ -186,11 +192,14 @@
               Berea, Estados Unidos
             </h2>
             <img
-              src="./images/__image3.png"
-              alt="Ciudad Natal"
+              src="./images/ciudad_berea.png"
+              alt="Ciudad de Practicum"
               class="content__image"
             />
-            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="content__frame6"
+            >
               Compra esta obra de arte como NFT
             </a>
             <div class="content__website content__website_position">
@@ -223,11 +232,14 @@
           <div class="content__place">
             <h2 class="content__title">Muramvya, Burundi</h2>
             <img
-              src="./images/__image4.png"
-              alt="Ciudad Natal"
+              src="./images/ciudad_muramvya.png"
+              alt="Ciudad de Practicum"
               class="content__image"
             />
-            <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="content__frame6"
+            >
               Compra esta obra de arte como NFT
             </a>
             <div class="content__website">
@@ -269,13 +281,16 @@
           <div class="content__place">
             <h2 class="content__title">Lima, Peru</h2>
             <img
-              src="./images/image__5.png"
-              alt="Ciudad Natal"
+              src="./images/ciudad_lima.png"
+              alt="Ciudad de Practicum"
               class="content__image"
             />
-              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="content__frame6">
-                Compra esta obra de arte como NFT
-              </a>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="content__frame6"
+            >
+              Compra esta obra de arte como NFT
+            </a>
             <div class="content__website">
               <a class="content__url-heading">Artista</a>
               <div class="content__artistas">
